# testing_project

./: README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  dockerfile  main.py  pyproject.toml  requirements.txt
collections_core/alembic/: env.py
collections_core/alembic/versions/: 2023_01_27_1900-4a64c96a6262_create_user_model.py  2023_01_30_1618-6f9e680d63fb_add_phone_number_feild.py  2023_01_30_1715-fbc1734cdb88_add_generate_relatioinship.py  2023_01_30_1719-5fb60021a93e_add_generate_relatioinship_message_with_.py  2023_01_31_1637-8b094d112c72_change_relationsh.py  2023_01_31_1659-8ef9106e8642_change_filed_relationship.py  2023_01_31_1703-64a52eae631a_last_test.py  2023_01_31_1711-2eae486460f7_alembic_last_testtststst.py  2023_01_31_1734-c541e0d36800_change_filed_message_on_message_ref.py  2023_02_02_1653-5032cfc60bc4_phone_number_setter.py
collections_core/apps/clients/: admin.py  models.py  schemas.py  selectors.py
collections_core/apps/clients/views/: api.py
collections_core/apps/commons/: phone_number.py
collections_core/apps/db/: base.py  base_model.py  constants.py  deps.py  session.py
collections_core/apps/service/: admin.py  models.py  schemas.py  selectors.py  services.py  tasks.py  utils.py
collections_core/apps/service/views/: api.py  core.py
collections_core/config/: config.py
